# Mosaique

./: .gitignore  Build.sh  CMakeLists.txt  Couleur.hpp  DatabaseLocation  InitCMake.sh  Launch.sh  Makefile  README.md  florentin.ppm  main.cpp  tmpSale.cpp
InterfaceWeb/: DatabaseLocation  index.html  package-lock.json  package.json  server.js
InterfaceWeb/public/: script.js  style.css
images/: gerard.pgm  husky.pgm
lib/: image_ppm.h
results/: mosaique.pgm
results/gif/: mosaique1.pgm  mosaique2.pgm  mosaique3.pgm  mosaique4.pgm  mosaique5.pgm  mosaique6.pgm  mosaique7.pgm
src/: Couleur.hpp  main.cpp
src/metier/: Couleur.hpp  Database.hpp  Image.hpp  Region.hpp
tools/: convertToPPM.sh  gif.sh  gifMosaique.sh  gifUnEvenMoaique.sh
